<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Mode" Id="{f35b1dc0-baac-4e6b-a9ae-7c6d114f3bf4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Mode :
	(
		Auto := 0,
		ExternalSetPoint
	);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>