<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Step" Id="{9d1a9ace-f243-4597-824c-40153318b4c3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE
	E_Step :
	(
		Init := 0,
		Idel,
		Enable,
		MoveMoverstoSafePos,
		MoveMoversToStartPos,
		SetMasterPos,
		CamIn,
		MoveMasterToEndOfCam,
		MoveMasterToStartOfCam,
		ExternalSetPoint,
		Stopping,
		CamOut,
		Disable,
		Error,
		Reset

	);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>