<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="tchmi_framework_definitions_XtsMoverList" Id="{41cbddb9-4d90-453b-b2f3-e4b9a9c050d0}">
    <Declaration><![CDATA[TYPE tchmi_framework_definitions_XtsMoverList : ARRAY[0..1] OF tchmi_framework_definitions_XtsMoverListItem; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>