<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_IO" Id="{02690cd5-3125-477d-a193-ca1ec0e02fdc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Button     AT %I* : BOOL;
	GreenLight AT %Q* : BOOL;
	RedLight   AT %Q* : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>